# proteus

./: .gitignore  PROGRESS.md  README.md  docker-compose.yml  netlify.toml  proteus  proteus-ui-preview.html  proteus.cmd  proteus.py  railway.json  vercel.json
.github/: dependabot.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  conftest.py  main.py  nim_client.py  pipeline.py  pyproject.toml  railway.json  rate_limit.py  requirements.txt  seed.py
backend/agents/: aggregator.py  cover_letter.py  cover_letter_models.py  gap_analyzer.py  gap_models.py  jd_models.py  jd_parser.py  resume_models.py  resume_parser.py  rewrite_models.py  rewrite_suggester.py
backend/db/: sqlite_store.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial.py
backend/parsers/: docx_parser.py  jd_url_fetcher.py  pdf_parser.py
backend/tests/: test_aggregator.py  test_aggregator_extended.py  test_api.py  test_api_hard.py  test_cover_letter.py  test_db.py  test_diverse_e2e.py  test_docx_parser.py  test_e2e.py  test_gap_analyzer.py  test_health.py  test_jd_models.py  test_models_extended.py  test_pdf_parser.py  test_response_quality.py  test_resume_models.py  test_rewrite_suggester.py  test_url_fetcher.py
backend/tests/fixtures/: diverse_jds.py  diverse_resumes.py  edge_cases.py  sample_jds.py  sample_resumes.py
frontend/: .env.example  .gitignore  index.html  netlify.toml  package-lock.json  package.json  playwright.config.js  vite.config.js
proteus-next/: .env.example  .env.local.example  .gitignore  commitlint.config.mjs  eslint.config.mjs  lighthouserc.json  models.json  next.config.ts  package-lock.json  package.json  playwright.config.ts  seed.ts  setup-turso.cjs  test-dataset.cjs  test-final.cjs  test-pipeline.mjs  vercel.json  (+3 more)
(+143 files in other folders)
