[project]
name = "proteus-backend"
version = "0.1.0"
description = "PROTEUS - JD-aware application toolkit backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "openai>=1.60.0",
    "pypdf>=5.0.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "pydantic>=2.10.0",
    "aiosqlite>=0.20.0",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["agents", "db", "parsers", "pipeline", "nim_client", "rate_limit"]
